--- a/font.html
+++ b/font.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <style media="screen">
-      div {
-        background-color:teal;
-        width:500px;
-        height:400px;
-        margin: 30px;
-        padding: 20px;
-      }
-    </style>
     <meta charset="utf-8">
     <title>My Web Page!</title>
+
+    <style media="screen">
+      div {
+        font-family: Arial, sans-serif;
+        font-size: 28px;
+        font-weight: bold;
+      }
+
+    </style>
+
   </head>
   <body>
     <div>
       Hello, world!
+
     </div>
 
   </body>
