--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,72 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-      <title> My webpage <title>
-    </head>
+      <title> My webpage </title>
 
+      <style media="screen">
+        table {
+          border: 2px solid black;
+          border-collapse: collapse;
+          width: 50%
+        }
+
+        th, td {
+          border: 1px solid black;
+          padding: 5px;
+          text-align: center;
+
+        }
+
+        th {
+          background-color: lightgray;
+        }
+
+      </style>
+    </head>
     <body>
       Hello, world! Hello again!
+      <h1>This is the largest headline </h1>
+      <h6> this is the smallest headline </h6>
+
+      <ul>
+        <li>One item</li>
+        <li>Second item </li>
+        <li> Another item </li>
+      </ul>
+
+      <ol>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Another item</li>
+
+      <img src="https://lokeshdhakar.com/projects/lightbox2/images/image-5.jpg" height = 200px>
+
+      <table>
+        <tr>
+          <th> First Name  </th>
+          <th>Last Name</th>
+          <th>Years in Office</th>
+        </tr>
+        <tr>
+          <td> George </td>
+          <td>Washington</td>
+          <td>1789-1797</td>
+        </tr>
+        <tr>
+          <td>John</td>
+          <td>Adams</td>
+          <td>1797-1801</td>
+        </tr>
+      </table>
+
+
+      <form>
+        <input type="text" placeholder="Full name" name="name">
+        <button> Submit </button>
+      </form>
+
+
+      </form>
     </body>
 
 </html>
